--- a/.ludo/_layout.jade
+++ b/.ludo/_layout.jade
@@ -4,16 +4,21 @@ html(lang="en")
         title= componentName
         link(rel="stylesheet" href=ludo_styles)
         link(rel="stylesheet" href=component_styles)
-        if mode=='design'
-            script(src="ludo_assets/socket.io.js")
-            script(src=reload_script)
     body(class="mode-#{mode}")
         each page in pages
-            each component in page.components
-                - with(component){
-                    .component
-                        include _component.jade
-                    if drawBacks
-                        .component
-                            include _component_back.jade
-                - }
+            .page
+                .vertical-mark
+                each component in page.components
+                    - with(component){
+                        .component(class="component-#{index}")
+                            include _component.jade
+                    - }
+            
+            if drawBacks
+                .page.back-page
+                    .vertical-mark
+                    each component in page.components
+                        - with(component){
+                            .component(class="component-#{reverseIndex}")
+                                include _component_back.jade
+                        - }
