--- a/templates/rulers.jade
+++ b/templates/rulers.jade
@@ -1,11 +1,12 @@
 .content
-  .header
+  .border(class=type.toLowerCase())
     .header
-      .name=name
-      .title=title
-      .type=type
+      .header
+        .name=name
+        .title=title
+        .type=type
 
-  .card-details
-    p.instructions=instructions
-    p.reward=reward
-    p.reward_text=reward_text
+    .card-details
+      p.instructions=instructions
+      p.reward=reward
+      p.reward_text=reward_text
