--- a/less/rulers.less
+++ b/less/rulers.less
@@ -1,5 +1,12 @@
 .content {
-  width:100%;
+  width: 100%;
+  height: 100%;
+  box-sizing: border-box;
+  padding: 10px;
+  .border {
+    width: 100%;
+    height: 100%;
+  }
 }
 
 .header {
@@ -13,11 +20,27 @@
 .card-details {
   padding-top: 20px;
   text-align: center;
-  width:80%;
+  width: 80%;
   margin-left: auto;
   margin-right: auto;
   .instructions {
     border-bottom: 3px black solid;
     padding-bottom: 20px;
   }
+}
+
+.border {
+  box-sizing: border-box; 
+}
+.human.border {
+  border: 1px solid grey;
+}
+.elf.border {
+  border: 1px solid green;
+}
+.dwarf.border {
+  border: 1px solid gold;
+}
+.orc.border {
+  border: 1px solid orange;
 }
