--- a/less/rulers.less
+++ b/less/rulers.less
@@ -3,44 +3,62 @@
   height: 100%;
   box-sizing: border-box;
   padding: 10px;
+  font-family: serif;
+  font-size: 9pt;
   .border {
     width: 100%;
     height: 100%;
+    box-sizing: border-box; 
+    border-style: solid;
+    border-width: 3px;
+    
+    .header {
+      width: 100%;
+      padding-top: 5px;
+      display: block;
+      width: 100%;
+      text-align: center;
+
+      .name {
+        font-size: 14pt;
+        font-weight: bold;
+      }
+
+      .title {
+        font-size: 12pt;
+        font-style: italic;
+      }
+
+      .race {
+        display: none;
+      }
+    }
+
+    .card-details {
+      padding-top: 5px;
+      text-align: center;
+      width: 80%;
+      margin-left: auto;
+      margin-right: auto;
+      .instructions {
+        border-bottom: 3px black solid;
+        padding-bottom: 10px;
+        height: 57px;
+      }
+    }
+
   }
 }
 
-.header {
-  width: 100%;
-  padding-top: 15px;
-  display: block;
-  width: 100%;
-  text-align: center;
-}
-
-.card-details {
-  padding-top: 20px;
-  text-align: center;
-  width: 80%;
-  margin-left: auto;
-  margin-right: auto;
-  .instructions {
-    border-bottom: 3px black solid;
-    padding-bottom: 20px;
-  }
-}
-
-.border {
-  box-sizing: border-box; 
-}
 .human.border {
-  border: 1px solid grey;
+  border-color: grey;
 }
 .elf.border {
-  border: 1px solid green;
+  border-color: green;
 }
 .dwarf.border {
-  border: 1px solid gold;
+  border-color: gold;
 }
 .orc.border {
-  border: 1px solid orange;
+  border-color: orange;
 }
