--- a/styles/rulers.css
+++ b/styles/rulers.css
@@ -3,40 +3,54 @@
   height: 100%;
   box-sizing: border-box;
   padding: 10px;
+  font-family: serif;
+  font-size: 9pt;
 }
 .content .border {
   width: 100%;
   height: 100%;
+  box-sizing: border-box;
+  border-style: solid;
+  border-width: 3px;
 }
-.header {
-  padding-top: 15px;
+.content .border .header {
+  padding-top: 5px;
   display: block;
   width: 100%;
   text-align: center;
 }
-.card-details {
-  padding-top: 20px;
+.content .border .header .name {
+  font-size: 14pt;
+  font-weight: bold;
+}
+.content .border .header .title {
+  font-size: 12pt;
+  font-style: italic;
+}
+.content .border .header .race {
+  display: none;
+}
+.content .border .card-details {
+  padding-top: 5px;
   text-align: center;
   width: 80%;
   margin-left: auto;
   margin-right: auto;
 }
-.card-details .instructions {
+.content .border .card-details .instructions {
   border-bottom: 3px black solid;
-  padding-bottom: 20px;
-}
-.border {
-  box-sizing: border-box;
+  padding-bottom: 10px;
+  height: 57px;
 }
 .human.border {
-  border: 1px solid grey;
+  border-color: grey;
 }
 .elf.border {
-  border: 1px solid green;
+  border-color: green;
 }
 .dwarf.border {
-  border: 1px solid gold;
+  border-color: gold;
 }
 .orc.border {
-  border: 1px solid orange;
+  border-color: orange;
 }
